--- a/app/src/main/res/layout/profil.xml
+++ b/app/src/main/res/layout/profil.xml
@@ -12,28 +12,45 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:translationZ="2dp">
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/profil_cv_nama"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/profil_linearcv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:cardCornerRadius="5dp">
-            <TextView
-                android:id="@+id/profil_nama"
+            android:orientation="horizontal">
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/profil_cv_nama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="5dp"
-                android:hint="Hi, user"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="@color/baru_coklatgelapbanget"
-                android:translationZ="2dp"/>
-        </com.google.android.material.card.MaterialCardView>
+                android:layout_margin="10dp"
+                app:cardCornerRadius="5dp">
+                <TextView
+                    android:id="@+id/profil_nama"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="5dp"
+                    android:hint="Hi, user"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/baru_coklatgelapbanget"
+                    android:translationZ="2dp"/>
+
+            </com.google.android.material.card.MaterialCardView>
+            <Button
+                android:id="@+id/profil_tombolEditProfil"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:drawableStart="@drawable/edit"
+                android:padding="5dp"
+                android:background="@drawable/tombol2"
+                android:text="Edit profil"/>
+
+        </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/profil_cv_status_dl"
-            android:layout_below="@id/profil_cv_nama"
+            android:layout_below="@id/profil_linearcv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
