--- a/app/src/main/res/layout/titip.xml
+++ b/app/src/main/res/layout/titip.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +8,68 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true">
 
-        <EditText
-            android:id="@+id/biodata_namalengkap"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
+        app:cardCornerRadius="50dp"
+        android:backgroundTint="@color/baru_coklatagakterangbanget"
+        android:elevation="5dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Nama lengkap sesuai KTP"
-            android:textColor="@color/ijogelap"
-            android:inputType="textEmailAddress"/>
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="30dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/titip_bt_barang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/tombol2"
+                android:text="barang"/>
+            <Button
+                android:id="@+id/titip_bt_hewan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/tombol2"
+                android:text="hewan"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/tombol2"
+                android:text="Keduanya"/>
+        </LinearLayout>
+        <FrameLayout
+            android:id="@+id/titip_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="90dp"
+            android:layout_marginBottom="75dp"/>
+
+    </com.google.android.material.card.MaterialCardView>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
+        android:backgroundTint="@color/baru_coklatgelap"
+        app:cardCornerRadius="50dp"
+        android:elevation="50dp">
+        <TextView
+            android:id="@+id/titip_kapasitas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="10dp"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:textColor="@color/baru_putih"
+            android:hint="Kapasitas gudang tersedia : 50 m^3"/>
+    </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/biodata_fab"
@@ -26,4 +81,4 @@
 
 
 
-</LinearLayout>
+</FrameLayout>
