--- a/app/src/main/res/layout/titip.xml
+++ b/app/src/main/res/layout/titip.xml
@@ -27,27 +27,32 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:background="@drawable/tombol2"
-                android:text="barang"/>
+                android:text="barang"
+                android:textColor="@color/baru_coklatagakgelapbanget"/>
             <Button
                 android:id="@+id/titip_bt_hewan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:background="@drawable/tombol2"
-                android:text="hewan"/>
+                android:text="hewan"
+                android:textColor="@color/baru_coklatagakgelapbanget"/>
             <Button
+                android:id="@+id/titip_bt_keduanya"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:background="@drawable/tombol2"
-                android:text="Keduanya"/>
+                android:text="Keduanya"
+                android:textColor="@color/baru_coklatagakgelapbanget"/>
         </LinearLayout>
         <FrameLayout
             android:id="@+id/titip_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="90dp"
-            android:layout_marginBottom="75dp"/>
+            android:layout_marginBottom="75dp"
+            android:layout_marginHorizontal="20dp"/>
 
     </com.google.android.material.card.MaterialCardView>
     <com.google.android.material.card.MaterialCardView
@@ -72,7 +77,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/biodata_fab"
+        android:id="@+id/titip_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
