--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,14 @@
 
     <color name="toggletint">#9e6027</color>
     <color name="tekslogindaftar">#35200c</color>
+
+    <!--paling baru-->
+    <color name="pastel_ijotua">#425f2f</color>
+    <color name="pastel_ijomuda">#7e9f82</color>
+    <color name="pastel_pink">#eac8bf</color>
+    <color name="pastel_coklat">#c69682</color>
+
+
     <!-- Screens background color-->
     <color name="bg_screen1">#f1e8df</color>
     <color name="bg_screen2">#f1e8df</color>
