--- a/app/src/main/res/drawable/buletancoklat.xml
+++ b/app/src/main/res/drawable/buletancoklat.xml
@@ -2,7 +2,8 @@
 <selector  xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/baru_coklatlebihkemerahan"/>
+            <stroke android:color="@color/baru_coklatlebihkemerahan"
+                android:width="30dp"/>
             <size android:width="200dp"
                 android:height="200dp"/>
         </shape>
