--- a/app/src/main/res/drawable/tombol2.xml
+++ b/app/src/main/res/drawable/tombol2.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <gradient
-                android:startColor="@color/baru_coklatgelapbanget"
-                android:endColor="@color/baru_coklatgelap"
-                android:angle="0" />
+        <shape android:shape="rectangle"
+            android:tint="@color/pastel_ijomuda">
+
             <corners android:radius="50dp"/>
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:color="@color/baru_coklatagakgelapbanget"
+            <stroke android:color="@color/pastel_ijomuda"
                 android:width="2dp"/>
             <corners android:radius="50dp"/>
         </shape>
