--- a/app/src/main/res/layout/isilistpromo.xml
+++ b/app/src/main/res/layout/isilistpromo.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:backgroundTint="@color/baru_coklatagakterangbanget"
+    android:backgroundTint="@color/pastel_pink"
     app:cardCornerRadius="10dp"
     android:elevation="5dp">
 
@@ -27,9 +27,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:hint="Paket 1"
-                android:textColor="@color/baru_coklatgelapbanget"
+                android:textColor="@color/baru_putih"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:fontFamily="@font/sofia_pro_black_az"/>
 
             <TextView
                 android:id="@+id/isilist_deskripsipaket"
@@ -37,16 +37,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:hint="2 Kendaraan, 1 kasur, 1 pasang sepatu, 20 set pakaian, jasa service / laundry"
-                android:textColor="@color/baru_coklatagakgelapbanget"
-                android:textSize="16sp"/>
+                android:textColor="@color/baru_putih"
+                android:fontFamily="@font/sofia_pro_medium_az"
+                android:textSize="17sp"/>
 
             <TextView
                 android:id="@+id/isilist_dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="Dp : Rp. 50 000"
-                android:textColor="@color/baru_coklatgelapbanget"
-                android:textSize="17sp" />
+                android:textColor="@color/baru_putih"
+                android:textSize="17sp"
+                android:fontFamily="@font/sofia_pro_light_az"/>
         </LinearLayout>
 
         <ImageView
