--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -36,7 +36,8 @@
         android:layout_alignParentRight="true"
         android:background="@null"
         android:text="@string/next"
-        android:textColor="@color/baru_coklatagakgelapbanget" />
+        android:textColor="@color/baru_coklatagakgelapbanget"
+        android:fontFamily="@font/sofia_pro_black_az"/>
 
     <Button
         android:id="@+id/btn_skip"
@@ -46,6 +47,7 @@
         android:layout_alignParentLeft="true"
         android:background="@null"
         android:text="@string/skip"
-        android:textColor="@color/baru_coklatagakgelapbanget" />
+        android:textColor="@color/baru_coklatagakgelapbanget"
+        android:fontFamily="@font/sofia_pro_black_az"/>
 
 </RelativeLayout>
