--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,24 +8,25 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <!--edittext-->
-        <item name="colorControlNormal">@color/baru_coklatgelapbanget</item>
-        <item name="android:textColorHint">@color/baru_coklatgelapbanget</item>
+        <item name="colorControlNormal">@color/pastel_ijomuda</item>
+        <item name="android:textColorHint">@color/pastel_ijomuda</item>
         <!---->
-        <item name="colorControlActivated">@color/baru_coklatgelapbanget</item>
+        <item name="colorControlActivated">@color/pastel_ijotua</item>
         <item name="colorControlHighlight">@color/colorPrimaryDark</item>
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
-    <!--material-->
+
+        <!--material-->
         <item name="colorPrimaryVariant">@color/colorPrimary</item>
         <item name="colorSecondaryVariant">@color/colorPrimaryDark</item>
-        <item name="colorSurface">@color/baru_coklatgelapbanget</item>
+        <item name="colorSurface">@color/pastel_ijotua</item>
         <item name="colorOnPrimary">@color/design_default_color_on_primary</item>
         <item name="colorOnSecondary">@color/design_default_color_on_secondary</item>
         <item name="colorOnBackground">@color/cardview_dark_background</item>
         <item name="colorOnError">@color/design_default_color_error</item>
-        <item name="colorOnSurface">@color/baru_coklatgelapbanget</item>
+        <item name="colorOnSurface">@color/pastel_ijotua</item>
         <item name="scrimBackground">@color/mtrl_scrim_color</item>
         <item name="textAppearanceHeadline1">@style/TextAppearance.MaterialComponents.Headline1</item>
         <item name="textAppearanceHeadline2">@style/TextAppearance.MaterialComponents.Headline2</item>
@@ -40,6 +41,7 @@
         <item name="textAppearanceCaption">@style/TextAppearance.MaterialComponents.Caption</item>
         <item name="textAppearanceButton">@style/TextAppearance.MaterialComponents.Button</item>
         <item name="textAppearanceOverline">@style/TextAppearance.MaterialComponents.Overline</item>
+        <item name="android:fontFamily">@font/sofia_pro_regular_az</item>
 
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
