--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -26,6 +26,7 @@
         android:layout_height="1dp"
         android:alpha=".5"
         android:layout_above="@id/layoutDots"
+        android:layout_marginBottom="-10dp"
         android:background="@color/baru_coklatagakgelapbanget" />
 
     <Button
@@ -33,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:background="@null"
         android:text="@string/next"
         android:textColor="@color/baru_coklatagakgelapbanget"
@@ -44,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:background="@null"
         android:text="@string/skip"
         android:textColor="@color/baru_coklatagakgelapbanget"
